Agregamos información en el archivo README

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
     <!--JS-->
-  <script> src="main.js"</script>
+  <script src="main.js"></script>
 </body>
 
 </html>
