Agregamos información en el archivo README

--- a/index.html
+++ b/index.html
@@ -144,14 +144,13 @@
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
               <div class="card border-0" style="width: 18rem;">
-                <img src="assets/fotoroca.jpg" class="rounded-circle card-img-top" alt="...">
+                <img src="/assets/daniel1.png" class="rounded-circle card-img-top" alt="...">
                 <div class="card-body text-center">
-                  <h5 class="card-title text-center">Card title</h5>
+                  <h5 class="card-title text-center">Daniel Hernandez</h5>
                   <div class="card-header">
-                    Featured
+                    LIc. en informatica
                   </div>
-                  <p class="card-text text-center">Some quick example text to build on the card title and make up the
-                    bulk of the card's content.</p>
+                  <p class="card-text text-center">Su dedicación, habilidades técnicas y capacidad para resolver problemas complejos son realmente impresionantes. Paola no solo aporta un conocimiento profundo en su campo, sino también una actitud proactiva y un compromiso inquebrantable con la excelencia.</p>
                 </div>
               </div>
             </div>
@@ -159,14 +158,13 @@
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
               <div class="card border-0" style="width: 18rem;">
-                <img src="assets/fotoroca.jpg" class="rounded-circle card-img-top" alt="...">
+                <img src="/assets/maria1.png" class="rounded-circle card-img-top" alt="...">
                 <div class="card-body text-center">
-                  <h5 class="card-title text-center">Card title</h5>
+                  <h5 class="card-title text-center">Maria Fernandez</h5>
                   <div class="card-header">
-                    Featured
+                    Desarrolladora web
                   </div>
-                  <p class="card-text text-center">Some quick example text to build on the card title and make up the
-                    bulk of the card's content.</p>
+                  <p class="card-text text-center">Es altamente competente, con gran dedicación y habilidades técnicas sobresalientes. La recomiendo sin reservas.</p>
                 </div>
               </div>
             </div>
@@ -174,14 +172,13 @@
           <div class="carousel-item active">
             <div class="d-flex justify-content-center">
               <div class="card border-0" style="width: 18rem;">
-                <img src="assets/fotoroca.jpg" class="rounded-circle card-img-top" alt="...">
+                <img src="/assets/mario2.png" class="rounded-circle card-img-top" alt="...">
                 <div class="card-body text-center">
-                  <h5 class="card-title text-center">Card title</h5>
+                  <h5 class="card-title text-center">Mario Aguilar</h5>
                   <div class="card-header">
-                    Featured
+                    ing. en sistemas
                   </div>
-                  <p class="card-text text-center">Some quick example text to build on the card title and make up the
-                    bulk of the card's content.</p>
+                  <p class="card-text text-center">altamente capaz, siempre dispuesta a enfrentar desafíos y encontrar soluciones innovadoras. Su ética de trabajo es insuperable.</p>
                 </div>
               </div>
             </div>
@@ -212,9 +209,9 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="https://github.com/Mont-Huet" target="_blank"
           class="nav-link px-2 text-body-secondary"><i class="bi bi-github"></i></a></li>
-      <li class="nav-item"><a href="#" target="_blank" class="nav-link px-2 text-body-secondary"><i
+      <li class="nav-item"><a href="https://www.linkedin.com/in/cruz-huet-paola-montserrat-079998321/" target="_blank" class="nav-link px-2 text-body-secondary"><i
             class="bi bi-linkedin"></i></a></li>
-      <li class="nav-item"><a href="#" target="_blank" class="nav-link px-2 text-body-secondary"><i
+      <li class="nav-item"><a href="https://x.com/mont_huet" target="_blank" class="nav-link px-2 text-body-secondary"><i
             class="bi bi-twitter-x"></i></a></li>
       <li class="nav-item"><a href="https://www.instagram.com/mont_huet17/" target="_blank" class="nav-link px-2 text-body-secondary"><i
             class="bi bi-instagram"></i></a></li>
