Agregamos el archivo README

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <main>
     <section id="sobre-mi">
       <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="/assets/fotoperfil1-removebg-preview.png" alt="foto-perfil" width="250"
-          height="330">
+        <img class="d-block mx-auto mb-4" src="assets/fotoMonts2-removebg-preview (2).png" alt="foto-perfil" width="250"
+          height="300">
         <h1 class="display-5 fw-bold text-body-emphasis">Montserrat Huet</h1>
 
         <h2 id="app"></h2>
@@ -116,20 +116,19 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="/assets/Captura de pantalla (215).png" class="card-img-top" alt="...">
+              <img src="/assets/SelenaQuintanilla.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Primera pagina</h5>
+                <h5 class="card-title"><a href="https://selena-quintanilla.vercel.app/">Primera pagina</a></h5>
                 <p class="card-text">Proyecto realizado en bootcamp de tecnolochicas PRO. Mediante HTML y CSS.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="/assets/TareasPend.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content.</p>
+                <h5 class="card-title"><a href="https://tareas-pendientes-azure.vercel.app/">Tareas Pendientes</a></h5>
+                <p class="card-text">Proyecto realizado en bootcamp de tecnolochicas PRO. Mediante HTML, CSS y JS.</p>
               </div>
             </div>
           </div>
